<resources>
    <string name="app_name">S.R.C.Médicas</string>
    <string name="app_sesion">Inicio de Sesion</string>
    <string name="app_email">Correo</string>
    <string name="app_clave">Clave</string>
    <string name="app_Registro_usuario">Registro de Usuario</string>
    <string name="app_aceptar">Aceptar</string>
    <string name="app_Registro">¿Aún no te has registrado?</string>
    <string name="app_nombreUsuario">Nombre de Usuario</string>
    <string name="Register">Confirmar</string>
    <string name="go_to_login">¿Ya tienes una cuenta?</string>
    <string name="app_reservar_cita">Reservar cita</string>
    <string name="app_mis_citas">Mis citas</string>
    <string name="app_close_session">Cerrar sesion</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="app_registro_de_cita">Reserva de cita</string>
    <string name="app_descripcion">Descripción</string>
    <string name="app_especialidad">Especialidad</string>
    <string name="app_tipocita">Tipo de atención</string>
    <string name="app_consulta">Consulta</string>
    <string name="app_operacion">Operacion</string>
    <string name="app_examen">Exámen</string>
    <string name="app_btn_next">Siguiente</string>
    <string name="app_fecha_de_cita">Fecha  de cita</string>
    <string name="app_medico">Médico</string>
    <string name="app_horarios">Horario disponibles</string>
    <string name="app_btn_confirmar">Confirmar</string>
    <string name="app_fecha_calendario">%1$s-%2$s-%3$s</string>
    <string name="prueba">pr</string>
    <string name="item_appoiment_id">"Cita N# %1$d"</string>
    <string name="item_appoiment_fecha">"Fecha de la cita %1$s"</string>
    <string name="item_appoiment_hora">"La hora de la cita es %1$s "</string>
    <string name="item_appoiment_medico">"Nombre del Médico es %1$s"</string>
    <string name="app_press_back_again">"Presione una vez màs si desea salir"</string>
    <string name="dialog_exit_title">¿Estas seguro de salir?</string>
    <string name="dialog_exit_message">Todos los datos ingresados se perderán</string>
    <string name="dialog_exit_positive">Si, salir</string>
    <string name="dialog_exit_negative">Continuar con el registro</string>
    <string name="validate_ppoiment_descripcion">La descripción es demasiado corta</string>
    <string name="app_hora_de_cita">Hora de cita</string>
    <string name="datos_de_cita">Datos de cita</string>
    <string name="validate_ppoiment_date">Ingrese una fecha</string>
    <string name="validate_ppoiment_time">Elija una hora</string>
    <string name="Error_al_cargar_datos_medicos">Se presentaron problemas al cargar los datos de los médicos</string>
    <string name="Error_cargar_horas">NO se ha podido cargar loas  horas porque</string>
    <string name="No_hay_horas_disponibles">No existen horas disponibles</string>
    <string name="Disponibilidad_horas">Seleccione fecha  para escojer horario</string>
    <string name="No_disponbilidad_horario">No existe disponibilidad en esta fecha</string>
    <string name="Problema_de_login">Ocuurió un problema</string>
    <string name="Error_ingresar">Se obtuvo una respuesta mala</string>
    <string name="api_Complete_los_datos">Por favor complete los datos</string>
    <string name="Usuario_Contrasena_incorrecto">Usuario o Contraseña Incorrecto</string>
    <string name="Email_password_empty">Por favor ingrese correo y clave!!</string>
    <string name="cita_regitada">Cita regitrada con éxito!!</string>
    <string name="app_confirmar_clave">Confirmar Clave</string>
    <string name="completecampos">Por favor complete todos los campos</string>
    <string name="confirmeclave">Confirmede la clave</string>
    <string name="default_notification_channel_id">default_notifiction_channel_id</string>
    <string name="fcm_message">fcm menssage</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="guardar">Guardar</string>
    <string name="app_nombres_completos">Nombres Completos</string>
    <string name="app_telefono">Telefóno</string>
    <string name="app_direccion">Dirección</string>
    <string name="app_guardar_datos">Guardar Datos</string>
    <string name="DatosPersonales">Datos Personales Básicos</string>
    <string name="app_save_file_user">Los datos han sido guardados</string>



</resources>
