<?xml version="1.0" encoding="utf-8"?>

   <androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/stepone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="12dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_descripcion"
                android:textColor="@color/colorcardview"

                />


            <EditText
                android:id="@+id/descripcioncard1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorcardview" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_especialidad"
                android:textColor="@color/colorcardview"

                />

            <Spinner
                android:id="@+id/especialidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_tipocita"
                android:textColor="@color/colorcardview" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:checkedButton="@id/tipoConsulta"
                android:id="@+id/RadiogroupConsulta">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_consulta"
                    android:textColor="@color/colorcardview"
                    android:id="@+id/tipoConsulta"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_operacion"
                    android:textColor="@color/colorcardview"
                    android:id="@+id/tipoOperacion"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tipoExamen"
                    android:text="@string/app_examen"


                    />
            </RadioGroup>

            <Button
                android:id="@+id/btn_siguiente"
                style="@style/menubutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:drawableEnd="@drawable/ic_siguiente_icon"
                android:drawableRight="@drawable/ic_siguiente_icon"
                android:text="@string/app_btn_next" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>








