<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAppoimentActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    android:padding="16dp"
    android:gravity="center"
    android:animateLayoutChanges="true"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/app_registro_de_cita"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorBlanco"  />


    <androidx.cardview.widget.CardView
        android:id="@+id/stepone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="12dp"
        android:visibility="gone"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_descripcion"
                android:textColor="@color/colorcardview"

                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorcardview" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_especialidad"
                android:textColor="@color/colorcardview"

                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/especialidad"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_tipocita"
                android:textColor="@color/colorcardview" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/app_consulta"
                    android:textColor="@color/colorcardview"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/app_operacion"
                    android:textColor="@color/colorcardview"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/app_examen"


                    />
            </RadioGroup>



        </LinearLayout>



    </androidx.cardview.widget.CardView>



  //ponemos otro cardview
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:id="@+id/steptwo"




        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_fecha_de_cita"
                android:textColor="@color/colorcardview"
                android:layout_marginTop="8dp"

                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorcardview"
                android:id="@+id/fechacita"
                android:onClick="onclickfechacitas"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_medico"
                android:textColor="@color/colorcardview"
                android:layout_marginTop="8dp"
                android:id="@+id/doctor"

                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:id="@+id/doctors"
                />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_horarios"
                android:textColor="@color/colorcardview"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                android:layout_width="0dp"
                 android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:id="@+id/radiogroupleft"

                >



            </LinearLayout>


                 <LinearLayout
                android:layout_width="0dp"
                     android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:id="@+id/radiogrouprigth"
                >



            </LinearLayout
                >
            </LinearLayout>



        </LinearLayout>





    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_siguiente"
        style="@style/menubutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/app_btn_next"
        android:drawableEnd="@drawable/ic_siguiente_icon"
        android:drawableRight="@drawable/ic_siguiente_icon" />
    <Button

        android:id="@+id/btn_confirmar"
        android:text="@string/app_btn_confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        style="@style/menubutton"
        android:drawableEnd="@drawable/ic_confirmar_cita_icon"
        android:visibility="gone"
        android:drawableRight="@drawable/ic_confirmar_cita_icon" />










</LinearLayout>










