<?xml version="1.0" encoding="utf-8"?>




    <androidx.cardview.widget.CardView
        android:id="@+id/steptwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="12dp"
    android:visibility="gone"

        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_fecha_de_cita"
                android:textColor="@color/colorcardview"

                />


            <EditText
                android:id="@+id/fechacita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:maxLines="1"
                android:onClick="onclickfechacitas"
                android:textColor="@color/colorcardview" />

            <TextView
                android:id="@+id/doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_medico"
                android:textColor="@color/colorcardview"

                />

            <Spinner
                android:id="@+id/doctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_horarios"
                android:textColor="@color/colorcardview" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Disponibilidad_horas"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/disponibilidad_hora"

                    />

            <TextView
                android:id="@+id/nodisponibilidadhora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/No_disponbilidad_horario"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/radiogroupleft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="12dp"

                    >


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/radiogrouprigth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="12dp">


                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_siguiente2"
                style="@style/menubutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:drawableEnd="@drawable/ic_siguiente_icon"
                android:drawableRight="@drawable/ic_siguiente_icon"
                android:text="@string/app_btn_next" />
        </LinearLayout>

    </ScrollView>
    </androidx.cardview.widget.CardView>












